import java.util.List;

public class TakipEdilenler {
    private List<String> takipEdilenler;

    // Getter ve Setter metotları
    public List<String> getTakipEdilenler() {
        return takipEdilenler;
    }

    public void setTakipEdilenler(List<String> takipEdilenler) {
        this.takipEdilenler = takipEdilenler;
    }
}

